--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <div class="slide"><img src="image3.png" alt="Image 3"></div>
             <div class="slide"><img src="image4.png" alt="Image 4"></div>
             <div class="slide"><img src="image5.png" alt="Image 5"></div>
+            <div class="slide"><img src="image1.png" alt="Image 1"></div>
+            <div class="slide"><img src="image2.png" alt="Image 2"></div>
+            <div class="slide"><img src="image3.png" alt="Image 3"></div>
         </div>
     </section>
 
